mobile safari alignment fix

--- a/style.css
+++ b/style.css
@@ -2506,7 +2506,10 @@ html {
 }
 
 /* Safari Flexbox Alignment Fix */
-.nav-menu > .nav-link,
-.nav-menu > .dark-mode-toggle {
+.nav-menu > .nav-link {
     align-self: center;
+    text-align: center; 
+    display: -webkit-inline-box;
+    -webkit-box-pack: center;
+    -webkit-box-align: center;
 }
